Added evolution chains and 'base_experience' attribute. Added evolution endpoint.
